# d4j_odc_implementation

./: .env.example  .gitignore  AGENTS.md  README.md  README_DETAILED.md  Thesis_PreDefense_Presentation.pptx  main.tex  mf_actual_integration_plan.md  odc_doc.md  pyproject.toml  requirements.txt  thesis_plan.md  thesis_review.md
.dist/runs/Compress_44_postfix/: classification.json  context.json  report.md
.dist/study/: analysis.json  analysis.md  manifest_200.json  manifest_68.json
d4j_odc_pipeline/: __init__.py  analysis.py  batch.py  cli.py  comparison.py  console.py  defects4j.py  llm.py  models.py  multifault.py  odc.py  parsing.py  pipeline.py  prompting.py  results_export.py  web_fetch.py
d4j_odc_pipeline/interactive/: __init__.py  app.py  banner.py  commands.py  completer.py  handlers.py  rendering.py  session.py
docs/: ARCHITECTURE.md  END_TO_END_RQs.md  METHODOLOGY.md  RCEGen_ODC_Integration_Plan.md  RQs  Defect Classification.md  Research Paper Roadmap_ Defect Classification.md  SETUP.md  Thesis_PreDefense_Paper_Mapping.md  USAGE.md  eval_defence.md  logging_strategy_and_implementation_plan.md  odc_taxonomy_coverage_guide.md  parallel_run_implementation_plan.md  to_improve_the_system.md
iut_submissions/presentation/: SWE_Orthogonal Defect Classification on Defects4JUsing an LLM-Driven Scientific Approach_presentation.pptx  generate_presentation.py
iut_submissions/report/: citations.bib
tests/: test_analysis.py  test_batch.py  test_comparison.py  test_defects4j.py  test_llm.py  test_parsing.py  test_prompting.py  test_url_fetch.py
(+239 files in other folders)
