[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "d4j-odc-pipeline"
version = "0.2.0"
description = "Collect Defects4J bug context and classify into ODC defect types with an LLM."
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.scripts]
d4j-odc = "d4j_odc_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["d4j_odc_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
